fix: updated steps on manual dispatch tests

--- a/.github/workflows/manualDispatch.yml
+++ b/.github/workflows/manualDispatch.yml
@@ -23,9 +23,16 @@ on:
         default: 'unit'
 jobs:
   test:
+    name: Test
     runs-on: ubuntu-latest
     steps:
       - name: Greeting
         run: echo "Hello ${{ inputs.name }}! ${{ inputs.greeting }}"
+      - name: Setup Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: 18
+      - name: Install dependencies
+        run: npm ci
       - name: Run test
         run: npm run test
