--- a/.github/workflows/manualDispatch.yml
+++ b/.github/workflows/manualDispatch.yml
@@ -33,6 +33,6 @@ jobs:
         with:
           node-version: 18
       - name: Install dependencies
-        run: npm ci
+        run: npm install
       - name: Run test
         run: npm run test
