trying to output an input

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,5 +30,4 @@ jobs:
       - env:
           OUTPUT1: ${{needs.job1.outputs.output1}}
           OUTPUT2: ${{needs.job1.outputs.output2}}
-          OUTPUT3: ${{inputs.input_string}}
-        run: echo "$OUTPUT1 $OUTPUT2 $OUTPUT3"
+        run: echo "$OUTPUT1 $OUTPUT2 ${{inputs.input_string}}"
