--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,4 +30,5 @@ jobs:
       - env:
           OUTPUT1: ${{needs.job1.outputs.output1}}
           OUTPUT2: ${{needs.job1.outputs.output2}}
-        run: echo "$OUTPUT1 $OUTPUT2 ${{github.events.inputs.input_string}}"
+          OUTPUT2: ${{github.events.inputs.input_string}}
+        run: echo "$OUTPUT1 $OUTPUT2 OUTPUT3"
