--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,4 +31,4 @@ jobs:
           OUTPUT1: ${{needs.job1.outputs.output1}}
           OUTPUT2: ${{needs.job1.outputs.output2}}
           OUTPUT3: ${{github.events.inputs.input_string}}
-        run: echo "$OUTPUT1 $OUTPUT2 OUTPUT3"
+        run: echo "$OUTPUT1 $OUTPUT2 $OUTPUT3"
