--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,7 +6,7 @@ on:
   workflow_dispatch:
     inputs:
       input_string:
-        description: string to output
+        description: 'string to output'
         required: true
         type: string
         default: 'Hello world'
@@ -28,7 +28,7 @@ jobs:
     needs: job1
     steps:
       - env:
-          OUTPUT1: ${{needs.job1.outputs.output1}}
-          OUTPUT2: ${{needs.job1.outputs.output2}}
-          OUTPUT3: ${{github.events.inputs.input_string}}
-        run: echo "$OUTPUT1 $OUTPUT2 $OUTPUT3"
+          OUTPUT1: ${{ needs.job1.outputs.output1 }}
+          OUTPUT2: ${{ needs.job1.outputs.output2 }}
+          OUTPUT3: ${{ github.event.inputs.input_string }}
+          run: echo "$OUTPUT1 $OUTPUT2 $OUTPUT3"
