--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,5 +30,5 @@ jobs:
       - env:
           OUTPUT1: ${{ needs.job1.outputs.output1 }}
           OUTPUT2: ${{ needs.job1.outputs.output2 }}
-          OUTPUT3: ${{ github.event.inputs.input_string }}
+          OUTPUT3: ${{ github.event.inputs.input_string || 'Hello world' }}
         run: echo "$OUTPUT1 $OUTPUT2 $OUTPUT3"
